src/test/ui/issue-3021-b.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/issue-3021-b.rs:19:22
   |
LL |            self.v0 = k0 ^ 0x736f6d6570736575; //~ ERROR can't capture dynamic environment
   |                      ^^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0434`.
